# vts-browser-cpp

./: .gitignore  .gitmodules  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  USING.md
browser/: .gitignore  CMakeLists.txt  common.mk
browser/cmake/: buildsys_ide_groups.cmake  buildsys_initial_validation.cmake  buildsys_pack_data.cmake  buildsys_print_all_variables.cmake  buildsys_print_target_properties.cmake  buildsys_xcode_codesign.cmake  ios.toolchain.cmake  pack_data.cmake  print_all_variables.cmake  uwp.toolchain.cmake  wasm.toolchain.cmake  wasm_embed_file.cmake
browser/debian/: .gitignore  changelog  control  rules
browser/src/: dbglog  geo  geometry  glfw.cmake  half  http  imgproc  jsoncpp  lodepng.cmake  math  service  utility  vts-libs
browser/src/browser/: CMakeLists.txt
browser/src/cs-interop/: begin.cs  c2cs.sh  interop.sh
browser/src/dummyOptick/: CMakeLists.txt  optick.h
browser/src/glad/: CMakeLists.txt  glad.c  glad.h
browser/src/lodepng/: CMakeLists.txt  lodepng
browser/src/nuklear/: CMakeLists.txt  nuklear
browser/src/sdl/: CMakeLists.txt  sdl
browser/src/test-smoothness/: CMakeLists.txt  main.cpp
browser/src/test-two-cameras/: CMakeLists.txt  main.cpp
browser/src/vts-browser/: CMakeLists.txt  VtsBrowserConfig.cmake.in  auth.cpp  auth.hpp  buffer.cpp  credits.cpp  credits.hpp  csConvertor.hpp  fetchTask.cpp  fetcher.cpp  image.hpp  map.hpp  mapApi.cpp  mapConfig.cpp  mapResources.cpp  mapUtilities.cpp  obj.cpp  obj.hpp  options.cpp  renderer.cpp  resource.hpp  resourceGpu.cpp  resourceMap.cpp
browser/src/vts-browser-desktop/: CMakeLists.txt  dataThread.cpp  dataThread.hpp  editor.cpp  editor.hpp  gui.cpp  guiSkin.cpp  guiSkin.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  programOptions.cpp  programOptions.hpp  screenshot.cpp  smoothVariable.hpp
browser/src/vts-browser-glfw/: CMakeLists.txt  dataThread.cpp  dataThread.hpp  gpuContext.cpp  gpuContext.hpp  gui.cpp  guiSkin.cpp  guiSkin.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  programOptions.cpp  programOptions.hpp  threadName.hpp
browser/src/vts-browser-ios/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  CMakeLists.txt  ConfigItem.h  ConfigItem.m  ConfigViewController.h  ConfigViewController.m  Info.plist.in  Launch.storyboard  Main.storyboard  Map.h  Map.mm  MapViewController.h  MapViewController.mm  TimerObj.h  TimerObj.mm  UrlsViewController.h  UrlsViewController.m  main.cpp  main.m
browser/src/vts-browser-lib/: CMakeLists.txt  auth.cpp  boostProgramOptions.cpp  buffer.cpp  cache.cpp  cache.hpp  color.cpp  coordsManip.cpp  coordsManip.hpp  credits.cpp  data.cmake  fetchTask.hpp  fetcher.cpp  image.cpp  log.cpp  map.hpp  mapApi.cpp  mapConfig.cpp  mapUtilities.cpp  math.cpp  mesh.cpp  navigation.cpp  navigationAltitude.cpp  navigationSolver.cpp  navigationSolver.hpp  options.cpp  piha.cpp  piha.hpp  renderer.cpp  resourceAuth.cpp  resourceManager.cpp  resourceMapConfig.cpp  resourceMesh.cpp  resourceOther.cpp  resources.cpp  resources.hpp  search.cpp  sri.cpp  statistics.cpp  texture.cpp
browser/src/vts-browser-minimal/: CMakeLists.txt  main.cpp
browser/src/vts-browser-minimal-c/: CMakeLists.txt  main.c
browser/src/vts-browser-minimal-cpp/: CMakeLists.txt  main.cpp
browser/src/vts-browser-minimal-cs/: CMakeLists.txt  Program.cs  VtsGLControl.Designer.cs  VtsGLControl.cs  Window.Designer.cs  Window.cs  main.cs
browser/src/vts-browser-qt/: CMakeLists.txt  common.hpp  fetcher.cpp  fetcher.hpp  gpuContext.cpp  gpuContext.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp
browser/src/vts-browser-sdl/: CMakeLists.txt  Info.plist.in  main.cpp
browser/src/vts-browser-src/: CMakeLists.txt  auth.hpp  buffer.cpp  color.cpp  coordsManip.hpp  credits.cpp  credits.hpp  csConvertor.cpp  csConvertor.hpp  data.cmake  exceptions.cpp  fetchTask.cpp  fetchTask.hpp  fetcher.cpp  image.cpp  image.hpp  map.hpp  mapApi.cpp  mapConfig.hpp  mapResources.cpp  mapUtilities.cpp  math.cpp  navigation.cpp  obj.cpp  obj.hpp  options.cpp  renderer.cpp  resource.cpp  resource.hpp  resourceAuth.cpp  resourceGpu.cpp  resourceMap.cpp  resourceMap.hpp  resourceMapConfig.cpp  resourceMesh.cpp  resourceOther.cpp  resourceTexture.cpp  resources.cpp  resources.hpp  search.cpp  (+1 more)
browser/src/vts-browser-two-cameras/: CMakeLists.txt  main.cpp
browser/src/vts-browser-uwp/: CMakeLists.txt  Package.appxmanifest  _packages.config  main.cpp
browser/src/vts-browser-wasm/: CMakeLists.txt  main.cpp
browser/src/vts-browser-wasm-canvas/: CMakeLists.txt  common.hpp  index.html  inputs.cpp  jsInterop.cpp  main.cpp  render.cpp  render.hpp  renderOptions.cpp  timer.hpp  toHtml.cpp  vts.css  vts.js
browser/src/vts-browser-wasm-sdl/: CMakeLists.txt  main.cpp
browser/src/vts-extractor/: CMakeLists.txt  main.cpp
browser/src/vts-libbrowser/: CMakeLists.txt  VtsBrowserConfig.cmake.in  atmosphereDensityTexture.cpp  auth.cpp  authConfig.hpp  boostProgramOptions.cpp  boundLayers.cpp  buffer.cpp  cache.cpp  cache.hpp  camera.hpp  celestialBody.cpp  coordsManip.cpp  coordsManip.hpp  credits.cpp  credits.hpp  exceptions.cpp  fetchTask.hpp  fetcher.cpp  geodata.hpp  gpuResource.hpp  hashTileId.hpp  image.cpp  image.hpp  libJpeg.cpp  libPng.cpp  log.cpp  map.cpp  map.hpp  mapApi.cpp  mapApiC.cpp  mapApiC.hpp  mapApiCpp.cpp  mapCelestialBody.cpp  mapConfig.cpp  mapConfig.hpp  mapDraws.cpp  mapLayer.cpp  mapLayer.hpp  mapUtilities.cpp  (+36 more)
browser/src/vts-libbrowser-cs/: CMakeLists.txt  Callbacks.cs  Camera.cs  CameraBase.cs  DrawBase.cs  Draws.cs  Exception.cs  Interop.cs  Map.cs  Math.cs  Navigation.cs  Position.cs  Resources.cs  Search.cs  Searching.cs  Utilities.cs
browser/src/vts-librenderer/: CMakeLists.txt  VtsRendererConfig.cmake.in  atmosphereDensityTexture.cpp  atmosphereDensityTexture.hpp  (+20 more)
browser/src/vts-librenderer-cs/: .gitignore  CMakeLists.txt  Interop.cs  RenderContext.cs  RenderOptions.cs  RenderVariables.cs  RenderView.cs  Renderer.cs
browser/toolchains/: ios.cmake
renderer/: .gitignore  CMakeLists.txt  glfw.cmake  lodepng.cmake
renderer/src/: half  http  lodepng  nuklear.cmake  utility
(+611 files in other folders)
